Issue #DTW-4: Renamed z-index demo variable

--- a/source/demo.scss
+++ b/source/demo.scss
@@ -7,7 +7,7 @@
 @import "_patterns/00-elements/01-helpers/z-index";
 
 $border-radius: 8px;
-$z-index-elements: one, two, three;
+$demo-z-index-elements: one, two, three;
 
 .demo-z-index {
   background-color: $primary-color-orange;
@@ -38,20 +38,20 @@ $z-index-elements: one, two, three;
     background-color: $primary-color-green;
     left: 25px;
     top: 25px;
-    z-index: z($z-index-elements, one);
+    z-index: z($demo-z-index-elements, one);
   }
 
   &--two {
     background-color: $secondary-color-blue;
     left: 175px;
     top: 75px;
-    z-index: z($z-index-elements, two);
+    z-index: z($demo-z-index-elements, two);
   }
 
   &--three {
     background-color: $secondary-color-dark-blue;
     left: 350px;
     top: 125px;
-    z-index: z($z-index-elements, three);
+    z-index: z($demo-z-index-elements, three);
   }
 }
